2025-11-23T02:19:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19604517779 # 817
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-23
* notice: last 14d: unq all: 3 1650
* notice: prev accum: outdated-unq outdated-all / unq all: 2930 274954 / 2947 276685
* notice: next accum: outdated-unq outdated-all / unq all: 2931 275079 / 2948 276804
* notice: prev exec diff / last date diff / accum: unq all: +1 +119 -0 -75 / +1 +17 -0 -0 / 1 17
* notice: removed / changed dates: [2025-11-08] / [2025-11-09 2025-11-22 2025-11-23]

2025-11-22T01:54:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19588450351 # 816
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-22
* notice: last 14d: unq all: 3 1656
* notice: prev accum: outdated-unq outdated-all / unq all: 2929 274831 / 2946 276562
* notice: next accum: outdated-unq outdated-all / unq all: 2930 274954 / 2947 276685
* notice: prev exec diff / last date diff / accum: unq all: +1 +123 -0 -75 / +1 +23 -0 -0 / 1 23
* notice: removed / changed dates: [2025-11-07] / [2025-11-08 2025-11-21 2025-11-22]

2025-11-21T01:58:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19557404628 # 815
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-21
* notice: last 14d: unq all: 3 1660
* notice: prev accum: outdated-unq outdated-all / unq all: 2928 274710 / 2945 276440
* notice: next accum: outdated-unq outdated-all / unq all: 2929 274831 / 2946 276562
* notice: prev exec diff / last date diff / accum: unq all: +1 +122 -0 -71 / +1 +23 -0 -0 / 1 23
* notice: removed / changed dates: [2025-11-06] / [2025-11-07 2025-11-20 2025-11-21]

2025-11-20T01:57:36Z: