@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-11-11T02:00:32Z",
-  "count" : 120,
+  "timestamp" : "2025-11-24T02:07:33Z",
+  "count" : 45,
   "count_minmax" : [ 19, 120 ],
-  "count_decinc" : [ -0, +120 ],
+  "count_decinc" : [ -75, +120 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
