@@ -1,8 +1,8 @@
 {
   "timestamp" : "2025-11-24T02:07:33Z",
-  "count" : 123,
-  "count_minmax" : [ 17, 123 ],
-  "count_decinc" : [ -0, +123 ],
+  "count" : 19,
+  "count_minmax" : [ 19, 19 ],
+  "count_decinc" : [ -0, +19 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
