@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-11-23T02:19:26Z",
-  "count_outdated" : 275079,
-  "uniques_outdated" : 2931,
-  "count" : 276804,
-  "uniques" : 2948,
+  "timestamp" : "2025-11-24T02:07:33Z",
+  "count_outdated" : 275203,
+  "uniques_outdated" : 2932,
+  "count" : 276929,
+  "uniques" : 2949,
   "clones" : [
     {
-      "timestamp": "2025-11-09T00:00:00Z",
-      "count": 49,
-      "count_minmax": [ 19, 124 ],
-      "count_decinc": [ 75, 124 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2025-11-10T00:00:00Z",
-      "count": 120,
+      "count": 45,
       "count_minmax": [ 19, 120 ],
-      "count_decinc": [ 0, 120 ],
+      "count_decinc": [ 75, 120 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,18 @@
     },
     {
       "timestamp": "2025-11-23T00:00:00Z",
-      "count": 17,
-      "count_minmax": [ 17, 17 ],
-      "count_decinc": [ 0, 17 ],
+      "count": 123,
+      "count_minmax": [ 17, 123 ],
+      "count_decinc": [ 0, 123 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-24T00:00:00Z",
+      "count": 19,
+      "count_minmax": [ 19, 19 ],
+      "count_decinc": [ 0, 19 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
