@@ -1,15 +1,10 @@
 {
-  "count": 1650,
+  "count": 1651,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2025-11-09T00:00:00Z",
-      "count": 49,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-11-10T00:00:00Z",
-      "count": 120,
+      "count": 45,
       "uniques": 1
     },
     {
@@ -74,7 +69,12 @@
     },
     {
       "timestamp": "2025-11-23T00:00:00Z",
-      "count": 17,
+      "count": 123,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-11-24T00:00:00Z",
+      "count": 19,
       "uniques": 1
     }
   ]
