@@ -1,3 +1,12 @@
+2025-11-24T02:07:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19621158214 # 818
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-24
+* notice: last 14d: unq all: 3 1651
+* notice: prev accum: outdated-unq outdated-all / unq all: 2931 275079 / 2948 276804
+* notice: next accum: outdated-unq outdated-all / unq all: 2932 275203 / 2949 276929
+* notice: prev exec diff / last date diff / accum: unq all: +1 +125 -0 -75 / +1 +19 -0 -0 / 1 19
+* notice: removed / changed dates: [2025-11-09] / [2025-11-10 2025-11-23 2025-11-24]
+
 2025-11-23T02:19:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19604517779 # 817
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-23
